--- a/book_list/index.css
+++ b/book_list/index.css
@@ -18,14 +18,15 @@ body {
     /* align-items: center; */
     height: 100vh;
     padding: 20px;
+    background-color: #A4B465;
 }
 
 
 .books{
     padding: 15px;
-    background-color: #f7f7f7;
+    background-color: #f7f7f7fd;
     height: fit-content;
-    width: 500px;
+    min-width: 500px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
@@ -35,6 +36,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  color: #A4B465;
   
 }
 
@@ -45,6 +47,21 @@ body {
 
 input{
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input:focus , button:focus{
+    outline: none;
+}
+
+button{
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    background-color: #626F47;
+    color: white;
+    cursor: pointer;
+    font-weight: 600;
 }
