--- a/book_list/index.css
+++ b/book_list/index.css
@@ -41,6 +41,12 @@ body {
   
 }
 
+h1{
+    font-size: 1.7rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
  form{
     display: flex;
     flex-direction: column;
@@ -51,6 +57,11 @@ input{
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+label{
+    font-size: 1rem;
+    margin-bottom: 2px;
 }
 
 input:focus , button:focus{
