Change background to solid color for consistency in design

--- a/book_list/index.css
+++ b/book_list/index.css
@@ -19,7 +19,7 @@ body {
     /* align-items: center; */
     height: 100vh;
     padding: 20px;
-    background: linear-gradient(30deg, #A4B465 0%, #405e01 60%);
+    background-color: #A4B465;
 }
 
 
