--- a/book_list/index.css
+++ b/book_list/index.css
@@ -104,3 +104,24 @@ tr{
     padding: 10px;
     border-bottom: 1px solid #ccc;
 }
+
+.delete{
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: red;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+}
+
+.delete:hover{
+    background-color: #b40000;
+    transition: ease 0.6s;
+}
+
+td{
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
