--- a/book_list/index.css
+++ b/book_list/index.css
@@ -126,3 +126,14 @@ td{
     justify-content: space-between;
     align-items: center;
 }
+
+.alert{
+    padding: 10px;
+    background-color: #f44336;
+    color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
