Enhance alert system for book actions; add success and delete messages with corresponding styles

--- a/book_list/index.css
+++ b/book_list/index.css
@@ -137,3 +137,11 @@ td{
     justify-content: space-between;
     align-items: center;
 }
+
+.success{
+    background-color: #4CAF50;
+}
+
+.deleted{
+    background-color: #f44336;
+}
