--- a/quiz_app/styles.css
+++ b/quiz_app/styles.css
@@ -10,16 +10,16 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #573800;
+  background-color: #570030;
+  padding: 10%;
 }
 
 .container {
-  min-width: 400px;
-  max-width: 600px;
+width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  
   gap: 10px;
   padding: 15px;
 
@@ -33,6 +33,30 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1{
+h1,h3{
     color: #fff;
+    text-align: center
+}
+
+.answers{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+.btn{
+    padding: 10px;
+    border: none;
+    text-align: start;
+    border-radius: 5px;
+    background-color: #380235;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: #570030;
+    transition: 0.6s ease-in-out;
 }
