--- a/quiz_app/styles.css
+++ b/quiz_app/styles.css
@@ -15,14 +15,12 @@ body {
 }
 
 .container {
-width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
   gap: 10px;
   padding: 15px;
-
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -33,45 +31,53 @@ width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1,h3{
-    color: #fff;
-    text-align: center
+h1,
+h3 {
+  color: #fff;
+  text-align: center;
 }
 
-.answers{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+h1 {
+  background-color: #004600;
+  padding: 10px;
+  border-radius: 3px;
 }
 
-
-.btn, #next{
-    padding: 10px;
-    border: none;
-    text-align: start;
-    border-radius: 5px;
-    background-color: transparent;
-    color: #fff;
-    cursor: pointer;
+.answers {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.btn{
-    border: #fff 1px solid;
+.btn,
+#next {
+  padding: 10px;
+  border: none;
+  text-align: start;
+  border-radius: 5px;
+  background-color: transparent;
+  color: #fff;
+  cursor: pointer;
 }
 
-#next{
-    margin-top: 20px;
-    background-color: green;
-    padding: 10px 20px;
+.btn {
+  border: #fff 1px solid;
 }
 
-#next:hover{
-    background-color: #003f05;
-    transition: 0.6s ease-in-out;
+#next {
+  margin-top: 20px;
+  background-color: green;
+  padding: 10px 60px;
+  border-bottom: #fff 1px solid;
 }
 
-.btn:hover{
-    background-color: green;
-    transition: 0.6s ease-in-out;
+#next:hover {
+  background-color: #003f05;
+  transition: 0.6s ease-in-out;
+}
+
+.btn:hover {
+  background-color: green;
+  transition: 0.6s ease-in-out;
 }
