--- a/quiz_app/styles.css
+++ b/quiz_app/styles.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #003f05;
+  background-color: #000d55;
   padding: 10%;
 }
 
@@ -21,7 +21,7 @@ body {
   justify-content: center;
   gap: 10px;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -35,12 +35,6 @@ h1,
 h3 {
   color: #fff;
   text-align: center;
-}
-
-h1 {
-  background-color: #004600;
-  padding: 10px;
-  border-radius: 3px;
 }
 
 .answers {
@@ -67,17 +61,17 @@ h1 {
 
 #next {
   margin-top: 20px;
-  background-color: green;
+  background-color: #000d55;
   padding: 10px 60px;
-  border-bottom: #fff 1px solid;
+  
 }
 
 #next:hover {
-  background-color: #003f05;
+  background-color: #000d55;
   transition: 0.6s ease-in-out;
 }
 
 .btn:hover {
-  background-color: green;
+  background-color: #000d55;
   transition: 0.6s ease-in-out;
 }
