--- a/temp-converter/styles.css
+++ b/temp-converter/styles.css
@@ -10,7 +10,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin:0 auto ;
+    height: 100vh;
+    margin: 0;
 }
 
 .container{
