--- a/temp-converter/styles.css
+++ b/temp-converter/styles.css
@@ -29,7 +29,7 @@ body{
 
 input, button{
     width:100%;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     border: none;
 }
@@ -52,4 +52,19 @@ button:hover{
     background-color: #008dce;
     transition:ease-in-out 0.6s;
     
+}
+
+.results{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+}
+
+p{
+    background-color:#fff;
+    color: #005780;
+    padding: 15px;
+    border-radius: 5px;
+    width: 100%;
 }
