Refactor HTML structure and improve CSS styling for better readability and layout

--- a/temp-converter/styles.css
+++ b/temp-converter/styles.css
@@ -1,70 +1,69 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:15px;
-    background-color: #005780;
-    color: #fff;
-    padding: 15px;
-    border-radius: 10px;
-    width: 60%;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  background-color: #005780;
+  color: #fff;
+  padding: 15px;
+  border-radius: 10px;
+  width: 60%;
 }
 
-input, button{
-    width:100%;
-    padding: 15px;
-    border-radius: 5px;
-    border: none;
+input,
+button {
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
 }
 
-input:focus , button:focus{
-    outline: none;
+input:focus,
+button:focus {
+  outline: none;
 }
 
-
-
-button{
-    background-color: greenyellow;
-    font-weight: 600;
-    font-size: larger;
-    color: #005780;
+button {
+  background-color: #388db4;
+  font-weight: 600;
+  font-size: larger;
+  color: #fff;
 }
 
-button:hover{
-    color: #fff;
-    background-color: #008dce;
-    transition:ease-in-out 0.6s;
-    
+button:hover {
+  color: #fff;
+  background-color: #008dce;
+  transition: ease-in-out 0.6s;
 }
 
-.results{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 5px;
+.results {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 5px;
 }
 
-p{
-    background-color:#fff;
-    color: #005780;
-    padding: 15px;
-    border-radius: 5px;
-    width: 100%;
+p {
+  background-color: #fff;
+  color: #005780;
+  padding: 15px;
+  border-radius: 5px;
+  width: 100%;
 }
