--- a/temp-converter/styles.css
+++ b/temp-converter/styles.css
@@ -67,3 +67,20 @@ p {
   border-radius: 5px;
   width: 100%;
 }
+
+
+@media screen and (max-width: 1020px) {
+body{
+    padding: 5%;
+}
+
+    .container {
+      width:100%;
+    }
+  }
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 40%;
+    }
+}
