--- a/random-qoutes/styles.css
+++ b/random-qoutes/styles.css
@@ -5,3 +5,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100lvh;
+    margin: 0;
+}
