Added results section and improved button styles for random quotes generator

--- a/random-qoutes/styles.css
+++ b/random-qoutes/styles.css
@@ -21,11 +21,33 @@ body{
     padding: 15px;
     border-radius: 10px;
     color: #fff;
-
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    
     gap: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+button{
+    background-color: antiquewhite;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+}
+
+.results{
+    margin: 15px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#quote{
+    width: 100%;
+    background-color: antiquewhite;
+    padding: 10px;
+    border-radius: 5px;
+    color: #8f5100;
 }
