--- a/random-qoutes/styles.css
+++ b/random-qoutes/styles.css
@@ -37,6 +37,13 @@ button{
     width: 100%;
 }
 
+button:hover{
+    background-color: #3f2400;
+    color: #fff;
+    transition: ease-in-out 0.6s;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+}
+
 .results{
     margin: 15px 0 0 0;
     display: flex;
