Update background colors for improved aesthetics in calculator styles

--- a/basic-calculator/styles.css
+++ b/basic-calculator/styles.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   margin: auto;
   gap: 20px;
+  background-color: #dffafa;
 }
 
 .container {
@@ -21,7 +22,7 @@ body {
   justify-content: center;
   gap: 15px;
   border-radius: 10px;
-  background-color: #c5c5c5;
+  background-color: #e6e6e6;
   padding: 20px;
 
   box-shadow: 3px 3px 10px rgb(0, 0, 0, 0.2);
