--- a/basic-calculator/styles.css
+++ b/basic-calculator/styles.css
@@ -13,7 +13,7 @@ body {
   align-items: center;
   margin: auto;
   gap: 20px;
-  background-color: #dffafa;
+  background-color: #ffffff;
 }
 
 .container {
@@ -22,7 +22,7 @@ body {
   justify-content: center;
   gap: 15px;
   border-radius: 10px;
-  background-color: #e6e6e6;
+  background-color: #ff9900;
   padding: 20px;
 
   box-shadow: 3px 3px 10px rgb(0, 0, 0, 0.2);
@@ -30,7 +30,7 @@ body {
 
 button,
 input {
-  padding: 15px 20px;
+  padding: 15px;
   border-radius: 5px;
   border: none;
 }
@@ -52,6 +52,7 @@ button {
   background-color: #005353;
   font-weight: 800;
   color: #fff;
+  width: 50px;
 }
 
 button:hover {
